--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div>现在已经有一个基本的功能了</div>
   <div>注册功能完成一半</div>
+  <div>注册功能完成了</div>
   <scritp src="./resgiter.js"></scritp>
 </body>
 </html>
