--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <div>现在已经有一个基本的功能了</div>
-  <div>注册功能完成一半</div>
-  <div>注册功能完成了</div>
-  <scritp src="./resgiter.js"></scritp>
+  <div>登录功能完成了50%</div>
+
+
+  <div>登录完成了100%</div>
+  <sctipt src="./login.js"></sctipt>
 </body>
 </html>
